se crearan los partials de sass

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,1 +1,6 @@
+// referencias a archivos pequeños "partials" de los estilos que vamos a utilizar
 
+@import './base/settings';
+@import './base/base';
+
+//components
