se crean los estilos de los items que estaran dentro del sliceBar

--- a/src/styles/components/_journal.scss
+++ b/src/styles/components/_journal.scss
@@ -41,48 +41,53 @@
     
 }
 
-// .journal__entries {
-//     flex: 1 1 auto;
-//     margin-top: 30px;
-//     overflow-y: scroll;
-// }
+.journal__entries {
+    flex: 1 1 auto;
+    margin-top: 30px;
+    overflow-y: auto;
+}
 
-// .journal__entry {
-//     background-color: white;
-//     border-radius: 4px;
-//     color: $dark-grey;
-//     display: flex;
-//     margin-bottom: 10px;
-//     overflow: hidden;
-// }
+// //Oculta la barra de scroll
+// .journal__entries::-webkit-scrollbar {
+//     display: none;
+//   }
 
-// .journal__entry-picture {
-//     height: 75px;
-//     width: 75px;
-// }
+.journal__entry {
+    background-color: white;
+    border-radius: 4px;
+    color: $dark-grey;
+    display: flex;
+    margin-bottom: 10px;
+    overflow: hidden;
+}
+
+.journal__entry-picture {
+    height: 75px;
+    width: 75px;
+}
 
 
-// .journal__entry-body {
-//     padding: 10px;
-// }
+.journal__entry-body {
+    padding: 10px;
+}
 
-// .journal__entry-title {
-//     font-size: 14px;
-//     font-weight: bold;
-// }
+.journal__entry-title {
+    font-size: 14px;
+    font-weight: bold;
+}
 
-// .journal__entry-content {
-//     font-size: 10px;
-// }
+.journal__entry-content {
+    font-size: 10px;
+}
 
-// .journal__entry-date-box {
-//     align-items: center;
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-//     padding: 5px;
-// }
+.journal__entry-date-box {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 5px;
+}
 
-// .journal__entry-date-box span{
-//     font-size: 12px;
-// }
+.journal__entry-date-box span{
+    font-size: 12px;
+}
