estructura y diseño del home

--- a/src/styles/components/_notes.scss
+++ b/src/styles/components/_notes.scss
@@ -15,38 +15,38 @@
 }
 
 
-// .notes__content {
-//     display: flex;
-//     flex-direction: column;
-//     height: 100%;
-//     padding: 20px;
-// }
+.notes__content {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    padding: 20px;
+}
 
 
-// .notes__title-input, .notes__textarea {
-//     border: none;
+.notes__title-input, .notes__textarea {
+    border: none;
 
-//     &:focus{
-//         outline: none;
-//     }
-// }
+    &:focus{
+        outline: none;
+    }
+}
 
-// .notes__title-input {
-//     color: $dark-grey;
-//     font-size: 25px;
-//     font-weight: 700;
-//     margin-bottom: 10px;
-// }
+.notes__title-input {
+    color: $dark-grey;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
 
-// .notes__textarea {
-//     border: none;
-//     color: $dark-grey;
-//     font-size: 20px;
-//     flex: 1 1 auto;
-//     resize: none;
-// }
+.notes__textarea {
+    border: none;
+    color: $dark-grey;
+    font-size: 20px;
+    flex: 1 1 auto;
+    resize: none;
+}
 
-// .notes__image img {
-//     box-shadow: 5px 5px $dark-grey;
-//     height: 150px;
-// }
+.notes__image img {
+    box-shadow: 5px 5px $dark-grey;
+    height: 150px;
+}
